src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-ofT-dwF1000-b-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-floating true\n    default-column-width { fixed 1000; }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 0 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
